

USER-VISIBLE MODIFICATIONS

    o (3.1.1) If there is a duplicate entry in the hub cache for a resource, hub
    code will no longer produce an ERROR. If the duplicate resource was not
    requested the duplicate is ignored. If the duplicate resource is requested,
    produce a warning for corrupt cache and continue with first found entry.
    o (3.1.3) Fix typo in message display 

CHANGES IN VERSION 2.99.0
-------------------------

MAJOR UPDATES

    o (2.99.0) The default caching location has changed. Instead of
    rappdirs::user_cache_dir using tools::R_user_dir. To avoid conflicting
    caches, a user will have to manage an old cache location before
    proceeding. Information for handling an old cache location is provided in
    the vignette.
    o (2.99.0) Another major change, a default caching location is automatically
    created in a non interactive session instead of using a temporary
    location. In an interactive session, a user is still prompted for
    permission.

CHANGES IN VERSION 2.23.0
-------------------------

USER-VISIBLE MODIFICATIONS

    o (2.23.2) Create a new all encompassing vignette that references both
    ExpeirmentHub and AnnotationHub. Reference this one vignette in all four
    related packages instead of trying to maintain multiple vigenttes that were
    essentially the same. This also involves removing CreateAnAnnotationPackage
    
MODIFICATIONS

    o (2.23.1) Fixed ERROR message to better indicate vignette troubleshooting
    document and fixed reference in Troubleshooting vignette. These ERRORs are
    triggered by both AnnotationHub and ExperimentHub so clarified the
    Troubleshooting document is in AnnotationHub. 

CHANGES IN VERSION 2.21.0
-------------------------
BUG FIX

    o (2.21.5) Fix documentation for setting AnnotationHubOptions
    o (2.21.3) Fix printing of proxy when present
    
USER-VISIBLE MODIFICATIONS

    o (2.21.6) Make internet connection test less stringent